[package]
name = "html-xpath-regex"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.17.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
scraper = "0.22"
ego-tree = "0.10"
roxmltree = "0.20"
regex = "1"
